--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Dockerfile
+          file: .WildOasis.Api/Dockerfile
           push: true
           tags: wildoasis.azurecr.io/wildoasis:latest
 
