--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,15 +16,12 @@ jobs:
       - name: Login to Azure Container Registry
         run: az acr login --name wildoasis --username ${{ secrets.AZURE_USERNAME }} --password ${{ secrets.AZURE_PASSWORD }}
 
-      - name: Build and push Docker image
+      - name: Build Docker image
         run: docker build -f WildOasis.Api/Dockerfile --force-rm -t wildoasis.azurecr.io/wildoasis:latest .
         
 
-      - name: Bring down existing containers
-        run: docker-compose down
-
-      - name: Bring up new containers
-        run: docker-compose up
-
+      - name: Docker push iamge to Azure container registry
+        run: docker push wildoasis.azurecr.io/wildoasis:latest
+      
       - name: Run container
         run: docker run -d -p 8080:8080 wildoasis.azurecr.io/wildoasis:latest
