--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Install dotnet-ef tool
+        run: dotnet tool install --global dotnet-ef
+      - name: EF Core Database Update
+        working-directory: WildOasis
+        run: dotnet ef database update --verbose -f WildOasis.Infrastructure/Contexts/WildOasisDbContext  --project WildOasis.Infrastructure --startup-project WildOasis.Api 
+
       - name: Login to Azure Container Registry
         run: az acr login --name wildoasis --username ${{ secrets.AZURE_USERNAME }} --password ${{ secrets.AZURE_PASSWORD }}
 
