run instance on azure

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,11 +24,11 @@ jobs:
         run: az acr login --name wildoasis --username ${{ secrets.AZURE_USERNAME }} --password ${{ secrets.AZURE_PASSWORD }}
 
       - name: Build Docker image
-        run: docker build -f WildOasis.Api/Dockerfile --force-rm -t wildoasis.azurecr.io/wildoasis:latest3 .
+        run: docker build -f WildOasis.Api/Dockerfile --force-rm -t wildoasis.azurecr.io/wildoasis:latest4 .
         
 
       - name: Docker push iamge to Azure container registry
-        run: docker push wildoasis.azurecr.io/wildoasis:latest3
+        run: docker push wildoasis.azurecr.io/wildoasis:latest4
       
       - name: Run container
-        run: docker run -d -p 8080:8080 wildoasis.azurecr.io/wildoasis:latest3
+        run: docker run -d -p 8080:8080 --name WildOasis --os-type Linux --subscription Azure for Students --resource-group WildOasisNsi --location EastUS wildoasis.azurecr.io/wildoasis:latest4
